<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".Login">

    <!-- App Logo Image-->
    <androidx.cardview.widget.CardView
        android:id="@+id/logo_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/username_field"
        app:layout_constraintDimensionRatio="16:9">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="171dp"
            android:layout_height="171dp"
            android:contentDescription="@string/logo_description"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />
    </androidx.cardview.widget.CardView>


    <!-- Username text field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="82dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_card"
        android:hint="@string/username_hint_text"
        android:textColorHint="@color/black"
        android:id="@+id/username_field"
        app:boxStrokeColor="@color/black"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@color/navy"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintHorizontal_bias="0.502"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Password text field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="82dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/password_hint_text"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/username_field"
        app:boxStrokeColor="@color/black"
        app:boxBackgroundColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/navy"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Login button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login_button"
        android:backgroundTint="@color/navy"
        app:layout_constraintTop_toBottomOf="@id/password_field"
        app:layout_constraintBottom_toTopOf="@+id/new_user_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


    <!-- Text above create new account button -->
    <TextView
        android:id="@+id/new_user_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/new_user"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="17sp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintBottom_toTopOf="@+id/create_username_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <!-- Create account button -->
    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:text="@string/new_account_button_text"
        android:backgroundTint="@color/navy"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        />


    <!-- Create Username text field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="82dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_user_text"
        app:layout_constraintBottom_toTopOf="@id/create_password_field"
        android:hint="@string/username_hint_text"
        android:textColorHint="@color/black"
        android:id="@+id/create_username_field"
        app:boxStrokeColor="@color/black"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@color/navy"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:visibility="gone"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_username_input"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintHorizontal_bias="0.502"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Create Password text field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="82dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/password_hint_text"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/create_username_field"
        app:boxStrokeColor="@color/black"
        app:boxBackgroundColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/navy"
        android:visibility="gone"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_password_input"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="82dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/create_password_field"
        app:boxStrokeColor="@color/black"
        app:boxBackgroundColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/navy"
        android:visibility="gone"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>





</androidx.constraintlayout.widget.ConstraintLayout>